update tmux to latest version and remove duprecated code and fix mouse support

--- a/~/.tmux.conf
+++ b/~/.tmux.conf
@@ -2,15 +2,18 @@ set -g status off
 set -g default-terminal "screen-256color"
 set -g utf8
 set-window-option -g utf8 on
-set -g history-limit 10000
+set -g history-limit 20000
 setw -g mode-keys vi
 setw -g aggressive-resize on
 
 # explicitly disable mouse control
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
+set -g mouse-utf8 on
+bind -n WheelUpPane copy-mode -e
+#setw -g mode-mouse on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse-select-window on
 
 # set pane colors - hilight the active pane
 set-option -g pane-border-fg colour235 #base02
@@ -124,3 +127,24 @@ bind ^H split-window -h
 # kill-pane
 unbind ^X
 bind ^X killp
+
+# split verticaly using per
+bind F1 split-window -v -p 10
+bind F2 split-window -v -p 20
+bind F3 split-window -v -p 30
+bind F4 split-window -v -p 40
+bind F5 split-window -v -p 50
+bind F6 split-window -v -p 60
+bind F7 split-window -v -p 70
+bind F8 split-window -v -p 80
+bind F9 split-window -v -p 90
+# split horizontaly using per
+bind M-F1 split-window -h -p 10
+bind M-F2 split-window -h -p 20
+bind M-F3 split-window -h -p 30
+bind M-F4 split-window -h -p 40
+bind M-F5 split-window -h -p 50
+bind M-F6 split-window -h -p 60
+bind M-F7 split-window -h -p 70
+bind M-F8 split-window -h -p 80
+bind M-F9 split-window -h -p 90
