update archey3.cfg & aria2.conf & aria2c service

--- a/~/.config/archey3.cfg
+++ b/~/.config/archey3.cfg
@@ -1,5 +1,4 @@
 [core]
-display_modules = distro(), uname(n), uname(r), uptime(), wm(), de(), packages(), ram(), env(editor), env(shell), fs(/), fs(/mnt/Others), mpd(songs), sensor("coretemp-isa-0000")
+display_modules = distro(), uname(n), uname(r), uptime(), wm(), packages(), ram(), env(editor), env(shell), env(browser), fs(/), fs(/mnt/Others), mpd(songs), sensor("coretemp-isa-0000")
 align = top
 color = blue
-
