--- a/~/.config/systemd/user/aria2c.service
+++ b/~/.config/systemd/user/aria2c.service
@@ -3,7 +3,7 @@ Description=Aria2 User Service by %u
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/aria2c --enable-rpc --rpc-listen-all --rpc-allow-origin-all --save-session %h/.config/aria2/session.lock --input-file %h/.config/aria2/session.lock --conf-path=%h/.config/aria2/aria2.conf
+ExecStart=/home/lejenome/.local/bin/aria2c-daemon
 
 [Install]
 WantedBy=default.target
