enable DRI3 add clang_colored & cscope & TagList plugins to vim update zsh & mpv & vifm config

--- a/etc/X11/xorg.conf.d/20-radeon.conf
+++ b/etc/X11/xorg.conf.d/20-radeon.conf
@@ -6,4 +6,5 @@ Section "Device"
     Option "RenderAccel"     "on"
     Option "ColorTiling"     "on"
     Option "ColorTiling2D"   "on"
+    Option "DRI3"            "1"
 EndSection
