update fstab & journald & networkd & getNetworkStrength.sh & firefox configs add multilib repo to pacman disable rsync on powerpill add schroot config

--- a/etc/systemd/journald.conf
+++ b/etc/systemd/journald.conf
@@ -8,7 +8,7 @@
 # See journald.conf(5) for details
 
 [Journal]
-Storage=volatile
+Storage=auto
 Compress=yes
 Seal=yes
 SplitMode=uid
@@ -25,7 +25,7 @@ SystemKeepFree=10M
 #MaxFileSec=1month
 #ForwardToSyslog=yes
 #ForwardToKMsg=no
-#ForwardToConsole=no
+#ForwardToConsole=yes
 #ForwardToWall=yes
 #TTYPath=/dev/console
 #MaxLevelStore=debug
