update linux config to 4.3 and enable 3G cle support update squid and conky config

--- a/etc/mkinitcpio.conf
+++ b/etc/mkinitcpio.conf
@@ -1,16 +1,10 @@
-MODULES=""
+MODULES="ahci sd_mod btrfs radeon"
 
 BINARIES=""
 
 FILES=""
 
-HOOKS="base"
+HOOKS="base udev autodetect modconf block lvm2 filesystems keyboard"
 
-#COMPRESSION="gzip"
-#COMPRESSION="bzip2"
-#COMPRESSION="lzma"
-#COMPRESSION="xz"
-#COMPRESSION="lzop"
-#COMPRESSION="lz4"
-
-#COMPRESSION_OPTIONS=""
+COMPRESSION="xz"
+COMPRESSION_OPTIONS=""
