--- a/etc/squid/squid.conf
+++ b/etc/squid/squid.conf
@@ -1,10 +1,3 @@
-#
-# Recommended minimum configuration:
-#
-
-# Example rule allowing access from your local networks.
-# Adapt to list your (internal) IP networks from where browsing
-# should be allowed
 acl localnet src 10.0.0.0/8	# RFC1918 possible internal network
 acl localnet src 172.16.0.0/12	# RFC1918 possible internal network
 acl localnet src 192.168.0.0/16	# RFC1918 possible internal network
@@ -24,34 +17,13 @@ acl Safe_ports port 591		# filemaker
 acl Safe_ports port 777		# multiling http
 acl CONNECT method CONNECT
 
-#
-# Recommended minimum Access Permission configuration:
-#
-# Deny requests to certain unsafe ports
 http_access deny !Safe_ports
-
-# Deny CONNECT to other than secure SSL ports
 http_access deny CONNECT !SSL_ports
-
-# Only allow cachemgr access from localhost
 http_access allow localhost manager
 http_access deny manager
-
-# We strongly recommend the following be uncommented to protect innocent
-# web applications running on the proxy server who think the only
-# one who can access services on "localhost" is a local user
 #http_access deny to_localhost
-
-#
-# INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
-#
-
-# Example rule allowing access from your local networks.
-# Adapt localnet in the ACL section to list your (internal) IP networks
-# from where browsing should be allowed
 http_access allow localnet
 http_access allow localhost
-
 # And finally deny all other access to this proxy
 http_access deny all
 
@@ -62,7 +34,6 @@ sslproxy_options NO_SSLv2,NO_SSLv3,NO_TLSv1
 sslproxy_cert_error deny all
 #sslproxy_flags DONT_VERIFY_PEER
 #sslproxy_chiper;
-always_direct allow all
 # http://wiki.squid-cache.org/Features/DynamicSslCert
 sslcrtd_program /usr/lib/squid/ssl_crtd -s /home/cache/squid-ssl -M 50MB
 sslcrtd_children 20
@@ -73,29 +44,25 @@ http_port 3128 ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_siz
 http_port 3129 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/squid.pem key=/etc/squid/squid.pem
 # 3130 for http only proxy
 http_port 3130
-#disable icp and snmp
+#cache_peer 10.1.1.100 parent 8080 0 no-query default login=user:password
+#never_direct allow all
+offline_mode on
+
 icp_port 0
 snmp_port 0
-
-# Uncomment and adjust the following to add a disk cache directory.
 cache_dir diskd /home/cache/squid 3000 16 256
-
-# Leave coredumps in the first cache dir
 coredump_dir /var/cache/squid
 
-#
 # Add any of your own refresh_pattern entries above these.
-#
 refresh_pattern ^ftp:		1440	20%	10080
 refresh_pattern ^gopher:	1440	0%	1440
 refresh_pattern -i (/cgi-bin/|\?) 0	0%	0
 refresh_pattern .		0	20%	4320
 
-cache_mgr contact@lejenome.me
+cache_mgr bmoez.j@gmail.com
 shutdown_lifetime 5 seconds
 cache_mem 200 MB
 visible_hostname lejenome
-maximum_object_size 10 MB
+maximum_object_size 20 MB
 dns_defnames on
 dns_v4_first on
-
