add FR spell checking support for vim

--- a/etc/X11/xorg.conf.d/41-lvds-monitor.conf
+++ b/etc/X11/xorg.conf.d/41-lvds-monitor.conf
@@ -6,5 +6,5 @@ EndSection
 Section "Monitor"
 	Identifier  "VGA-0"
 	Option      "LeftOf" "LVDS"
-	Option      "Rotate" "left"
+#	Option      "Rotate" "left"
 EndSection
