--- a/etc/hostapd/hostapd.conf
+++ b/etc/hostapd/hostapd.conf
@@ -2,10 +2,10 @@ interface=ap0
 #ssid=FreeWifi
 #wpa_passphrase=FreeWifi
 ssid=lejenome-wifi
-wpa_passphrase=DCRLOPHS
+wpa_passphrase=moezbouh
 driver=nl80211
 hw_mode=g
-channel=13
+channel=1
 logger_stdout=-1
 logger_stdout_level=2
 max_num_sta=5
