--- a/~/.config/aria2/aria2.conf
+++ b/~/.config/aria2/aria2.conf
@@ -18,6 +18,6 @@ disable-ipv6
 
 #retry-wait=10
 #max-concurrent-downloads=5
-#all-proxy=http://user@pass@proxy:port
+all-proxy=http://11050096@lo66e3z9@10.100.0.1:8080
 #max-tries=5
 #min-split-size=20M
