--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -35,6 +35,10 @@ Host docker-skype
   RemoteForward 64713 localhost:4713
   ForwardX11 yes
 
+Host localhost 127.0.0.1
+  MACs hmac-md5
+  KexAlgorithms diffie-hellman-group1-sha1
+
 Host android.qemu
   MACs hmac-md5,hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
   KexAlgorithms diffie-hellman-group14-sha1,curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
@@ -47,3 +51,8 @@ Host *
     Protocol 2
     VisualHostKey yes
     #FingerprintHash md5
+#Host github.com
+#  Hostname ssh.github.com
+#  User git
+#  Port 443
+#  ProxyCommand ~/.zsh/02-proxy.zsh %h %p
