--- a/etc/schroot/schroot.conf
+++ b/etc/schroot/schroot.conf
@@ -10,3 +10,15 @@ personality=linux32
 aliases=32,default,i686
 preserve-environment=true
 shell=/bin/zsh
+
+[Arch64]
+type=directory
+description=Arch 64bit
+profile=arch32
+directory=/opt/arch64
+users=lejenome
+groups=users
+root-groups=root
+aliases=64,x86_64
+preserve-environment=true
+shell=/bin/zsh
