--- a/~/.config/mpd/mpd.conf
+++ b/~/.config/mpd/mpd.conf
@@ -1,10 +1,10 @@
 music_directory			"~/Music"
-playlist_directory		"~/.mpd/playlists"
-db_file				"~/.mpd/database"
+playlist_directory		"~/.local/share/mpd/playlists"
+db_file				"~/.local/share/mpd/database"
 log_file			"~/.cache/mpd.log"
-pid_file			"~/.mpd/pid"
-state_file			"~/.mpd/state"
-sticker_file			"~/.mpd/sticker.sql"
+pid_file			"~/.local/share/mpd/pid"
+state_file			"~/.local/share/mpd/state"
+sticker_file			"~/.local/share/mpd/sticker.sql"
 
 auto_update			"yes"
 filesystem_charset		"UTF-8"
@@ -16,182 +16,18 @@ restore_paused			"yes"
 audio_output {
 	type		"alsa"
 	name		"HDA Intel PCH"
+	auto_channels	"no"
+	auto_format	"no"
+	period_time	"50000"
 }
 
-# This setting sets the address for the daemon to listen on. Careful attention
-# should be paid if this is assigned to anything other then the default, any.
-# This setting can deny access to control of the daemon.
-#
-# For network
-#bind_to_address		"any"
-#
-# And for Unix Socket
-#bind_to_address		"~/.mpd/socket"
-#
-# This setting is the TCP port that is desired for the daemon to get assigned
-# to.
-#
-#port				"6600"
-#
-# This setting controls the type of information which is logged. Available 
-# setting arguments are "default", "secure" or "verbose". The "verbose" setting
-# argument is recommended for troubleshooting, though can quickly stretch
-# available resources on limited hardware storage.
-#
-#log_level			"default"
-#
-# If you have a problem with your MP3s ending abruptly it is recommended that 
-# you set this argument to "no" to attempt to fix the problem. If this solves
-# the problem, it is highly recommended to fix the MP3 files with vbrfix
-# (available from <http://www.willwap.co.uk/Programs/vbrfix.php>), at which
-# point gapless MP3 playback can be enabled.
-#
-#gapless_mp3_playback			"yes"
-#
-# Setting "restore_paused" to "yes" puts MPD into pause mode instead
-# of starting playback after startup.
-#
-#restore_paused "no"
-#
-# This setting enables MPD to create playlists in a format usable by other
-# music players.
-#
-#save_absolute_paths_in_playlists	"no"
-#
-# This setting defines a list of tag types that will be extracted during the
-# audio file discovery process. The complete list of possible values can be
-# found in the mpd.conf man page.
-#metadata_to_use	"artist,album,title,track,name,genre,date,composer,performer,disc"
-#
-# This setting enables automatic update of MPD's database when files in 
-# music_directory are changed.
-#
-#
-# Limit the depth of the directories being watched, 0 means only watch
-# the music directory itself.  There is no limit by default.
-#
-#auto_update_depth "3"
-#
-###############################################################################
+auto_update_depth "2"
 
+replaygain			"album"
 
-# Symbolic link behavior ######################################################
-#
-# If this setting is set to "yes", MPD will discover audio files by following 
-# symbolic links outside of the configured music_directory.
-#
-#follow_outside_symlinks	"yes"
-#
-# If this setting is set to "yes", MPD will discover audio files by following
-# symbolic links inside of the configured music_directory.
-#
-#follow_inside_symlinks		"yes"
-#
-###############################################################################
-
-
-# Zeroconf / Avahi Service Discovery ##########################################
-#
-# If this setting is set to "yes", service information will be published with
-# Zeroconf / Avahi.
-#
-#zeroconf_enabled		"yes"
-#
-# The argument to this setting will be the Zeroconf / Avahi unique name for
-# this MPD server on the network.
-#
-#zeroconf_name			"Music Player"
-#
-###############################################################################
-
-# Database #######################################################################
-#
-
-#database {
-#       plugin "proxy"
-#       host "other.mpd.host"
-#       port "6600"
+#audio_output {
+#    type                    "fifo"
+#    name                    "my_fifo"
+#    path                    "/tmp/mpd.fifo"
+#    format                  "44100:16:2"
 #}
-
-# Input #######################################################################
-#
-
-input {
-        plugin "curl"
-#       proxy "proxy.isp.com:8080"
-#       proxy_user "user"
-#       proxy_password "password"
-}
-
-#
-###############################################################################
-
-# Normalization automatic volume adjustments ##################################
-#
-# This setting specifies the type of ReplayGain to use. This setting can have
-# the argument "off", "album", "track" or "auto". "auto" is a special mode that
-# chooses between "track" and "album" depending on the current state of
-# random playback. If random playback is enabled then "track" mode is used.
-# See <http://www.replaygain.org> for more details about ReplayGain.
-# This setting is off by default.
-#
-#replaygain			"album"
-#
-# This setting sets the pre-amp used for files that have ReplayGain tags. By
-# default this setting is disabled.
-#
-#replaygain_preamp		"0"
-#
-# This setting sets the pre-amp used for files that do NOT have ReplayGain tags.
-# By default this setting is disabled.
-#
-#replaygain_missing_preamp	"0"
-#
-# This setting enables or disables ReplayGain limiting.
-# MPD calculates actual amplification based on the ReplayGain tags
-# and replaygain_preamp / replaygain_missing_preamp setting.
-# If replaygain_limit is enabled MPD will never amplify audio signal
-# above its original level. If replaygain_limit is disabled such amplification
-# might occur. By default this setting is enabled.
-#
-#replaygain_limit		"yes"
-#
-# This setting enables on-the-fly normalization volume adjustment. This will
-# result in the volume of all playing audio to be adjusted so the output has 
-# equal "loudness". This setting is disabled by default.
-#
-#volume_normalization		"no"
-#
-###############################################################################
-
-
-# SIDPlay decoder #############################################################
-#
-# songlength_database:
-#  Location of your songlengths file, as distributed with the HVSC.
-#  The sidplay plugin checks this for matching MD5 fingerprints.
-#  See http://www.c64.org/HVSC/DOCUMENTS/Songlengths.faq
-#
-# default_songlength:
-#  This is the default playing time in seconds for songs not in the
-#  songlength database, or in case you're not using a database.
-#  A value of 0 means play indefinitely.
-#
-# filter:
-#  Turns the SID filter emulation on or off.
-#
-#decoder {
-#	plugin			"sidplay"
-#	songlength_database	"/media/C64Music/DOCUMENTS/Songlengths.txt"
-#	default_songlength	"120"
-#	filter "true"
-#}
-#
-###############################################################################
-
-audio_output {
-    type                    "fifo"
-    name                    "my_fifo"
-    path                    "/tmp/mpd.fifo"
-    format                  "44100:16:2"
-}
