update linux config to v4.4 delete unused cunstomize.d files add more mount points on schroot for better pulseaudio, sudo, pts and cups support add alias for package management for schroots

--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -6,9 +6,9 @@ CacheDir    = /home/cache/makepkg-packages
 #GPGDir      = /etc/pacman.d/gnupg/
 HoldPkg     = pacman glibc
 #XferCommand = /usr/bin/curl -C - -f %u > %o
-#CleanMethod = KeepInstalled
+CleanMethod = KeepCurrent
 #UseDelta    = 0.7
-Architecture = auto
+Architecture = x86_64
 
 #IgnorePkg   =
 #IgnoreGroup =
@@ -21,7 +21,7 @@ Architecture = auto
 Color
 #TotalDownload
 CheckSpace
-#VerbosePkgLists
+VerbosePkgLists
 
 SigLevel    = Required DatabaseOptional
 LocalFileSigLevel = Optional
