--- a/~/.config/conky/conky.conf
+++ b/~/.config/conky/conky.conf
@@ -13,6 +13,9 @@ conky.config = {
 
 conky.text = [[
 [
+${if_match "${mpd_status}" == "Playing"}
+	{"full_text":"\uF001 ${mpd_smart} ${mpd_bar 1,10} \uF001 |", "color":"\#949494","separator":false},
+${endif}
 # CPU temperature:
 {"full_text":"\uF109","color":"\#949494","separator":false,"separator_block_width":6},
 {"full_text":"${if_match ${acpitemp}<45}${acpitemp}°C","color":"\#909737","separator":false,"separator_block_width":6},
@@ -43,11 +46,19 @@ ${if_match ${downspeedf wlp8s0}>0}
 	{"full_text":"${if_match ${downspeedf wlp8s0}>=3000}${downspeed wlp8s0}","color":"\#924020","separator":false,"separator_block_width":6},
 	{"full_text":"${endif}${endif}${endif}"},
 ${else}
+${if_match ${downspeedf enp0s26u1u2}>0}
 	{"full_text":"${if_match ${downspeedf enp0s26u1u2}<1000}${downspeed enp0s26u1u2}","color":"\#909737","separator":false,"separator_block_width":6},
 	{"full_text":"${else}"},
 	{"full_text":"${if_match ${downspeedf enp0s26u1u2}<3000}${downspeed enp0s26u1u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	{"full_text":"${else}"},
 	{"full_text":"${if_match ${downspeedf enp0s26u1u2}>=3000}${downspeed enp0s26u1u2}","color":"\#924020","separator":false,"separator_block_width":6},
+	{"full_text":"${endif}${endif}${endif}"},
+${else}
+	{"full_text":"${if_match ${downspeedf enp0s20u1}<1000}${downspeed enp0s20u1}","color":"\#909737","separator":false,"separator_block_width":6},
+	{"full_text":"${else}"},
+	{"full_text":"${if_match ${downspeedf enp0s20u1}<3000}${downspeed enp0s20u1}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	{"full_text":"${else}"},
+	{"full_text":"${if_match ${downspeedf enp0s20u1}>=3000}${downspeed enp0s20u1}","color":"\#924020","separator":false,"separator_block_width":6},
 	{"full_text":"${endif}${endif}${endif}"},
 ${endif}
 ${endif}
@@ -69,12 +80,21 @@ ${if_match ${upspeedf wlp8s0}>0}
 	{"full_text":"${if_match ${upspeedf wlp8s0}>=3000}${upspeed wlp8s0}","color":"\#924020","separator":false,"separator_block_width":6},
 	{"full_text":"${endif}${endif}${endif}"},
 ${else}
+${if_match ${upspeedf enp0s26u1u2}>0}
 	{"full_text":"${if_match ${upspeedf enp0s26u1u2}<1000}${upspeed enp0s26u1u2}","color":"\#909737","separator":false,"separator_block_width":6},
 	{"full_text":"${else}"},
 	{"full_text":"${if_match ${upspeedf enp0s26u1u2}<3000}${upspeed enp0s26u1u2}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	{"full_text":"${else}"},
 	{"full_text":"${if_match ${upspeedf enp0s26u1u2}>=3000}${upspeed enp0s26u1u2}","color":"\#924020","separator":false,"separator_block_width":6},
 	{"full_text":"${endif}${endif}${endif}"},
+${else}
+	{"full_text":"${if_match ${upspeedf enp0s20u1}<1000}${upspeed enp0s20u1}","color":"\#909737","separator":false,"separator_block_width":6},
+	{"full_text":"${else}"},
+	{"full_text":"${if_match ${upspeedf enp0s20u1}<3000}${upspeed enp0s20u1}","color":"\#b27d12","separator":false,"separator_block_width":6},
+	{"full_text":"${else}"},
+	{"full_text":"${if_match ${upspeedf enp0s20u1}>=3000}${upspeed enp0s20u1}","color":"\#924020","separator":false,"separator_block_width":6},
+	{"full_text":"${endif}${endif}${endif}"},
+${endif}
 ${endif}
 ${endif}
 # Memory: \uF30d
@@ -98,12 +118,15 @@ ${endif}
 #{"full_text":"${execpi 120 ~/.config/conky/weather.sh}°","color":"\#909737","separator":false,"separator_block_width":6},
 # Mail: \uF1fa
 {"full_text":"\uF3e5","color":"\#949494","separator":false,"separator_block_width":6},
-{"full_text":"${if_match ${execpi 30 ls ~/mail/new |wc -l}<=0}${execpi 30 ls ~/mail/new |wc -l}","color":"\#909737","separator":false,"separator_block_width":6},
-{"full_text":"${else}"},
-{"full_text":"${if_match ${execpi 30 ls ~/mail/new |wc -l}<=2}${execpi 30 ls ~/mail/new |wc -l}","color":"\#b27d12","separator":false,"separator_block_width":6},
-{"full_text":"${else}"},
-{"full_text":"${if_match ${execpi 30 ls ~/mail/new |wc -l}>2}${execpi 30 ls ~/mail/new |wc -l}","color":"\#924020","separator":false,"separator_block_width":6},
-{"full_text":"${endif}${endif}${endif}"},
+${if_match ${new_mails mail 30} <= 0}
+	{"full_text":"${new_mails mail 30}","color":"\#909737","separator":false,"separator_block_width":6},
+${else}
+${if_match ${new_mails mail 30} <= 2}
+	{"full_text":"${new_mails mail 30}","color":"\#b27d12","separator":false,"separator_block_width":6},
+${else}
+	{"full_text":"${new_mails mail 30}","color":"\#924020","separator":false,"separator_block_width":6},
+${endif}
+${endif}
 # RSS
 {"full_text":"\uF09e","color":"\#949494","separator":false,"separator_block_width":6},
 {"full_text":"${if_match ${execpi 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0}>0}"},
