update schroot chroots config update conky & gpg & mutt

--- a/etc/schroot/schroot.conf
+++ b/etc/schroot/schroot.conf
@@ -1,7 +1,7 @@
 [Arch32]
 type=directory
 description=Arch 32bit
-profile=arch32
+profile=arch
 directory=/opt/arch32
 users=lejenome
 groups=users
@@ -14,11 +14,23 @@ shell=/bin/zsh
 [Arch64]
 type=directory
 description=Arch 64bit
-profile=arch32
+profile=arch
 directory=/opt/arch64
 users=lejenome
 groups=users
 root-groups=root
 aliases=64,x86_64
+preserve-environment=true
+shell=/bin/zsh
+
+[ubuntu]
+type=block-device
+description=My dual-boot Ubuntu
+profile=ubuntu
+#directory=/mnt/ubuntu
+device=/dev/disk/by-label/Ubuntu
+users=lejenome
+groups=users
+root-groups=root
 preserve-environment=true
 shell=/bin/zsh
