--- a/~/.config/conky/conky.conf
+++ b/~/.config/conky/conky.conf
@@ -62,6 +62,7 @@ ${else}
 	{"full_text":"${endif}${endif}${endif}"},
 ${endif}
 ${endif}
+${endif}
 # Upload:
 {"full_text":"\uF0ee","color":"\#949494","separator":false,"separator_block_width":6},
 ${if_match ${upspeedf enp9s0}>0}
