--- a/~/.gnupg/gpg.conf
+++ b/~/.gnupg/gpg.conf
@@ -14,8 +14,8 @@ require-cross-certification
 no-greeting
 charset utf-8
 no-mangle-dos-filenames
+keyserver http://http-keys.gnupg.net
 keyserver hkp://keys.gnupg.net
-#keyserver http://http-keys.gnupg.net
 #keyserver mailto:pgp-public-keys@keys.nl.pgp.net
 #
 
