add mrconfig, update vim & ssh & git config

--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -27,6 +27,12 @@
 
 Host github.com
     MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512
+    ControlMaster auto
+    ControlPath ~/.ssh/sockets/%r@%h:%p
+    ControlPersist 5m
+    ServerAliveInterval 5
+    ServerAliveCountMax 1
+    TCPKeepAlive yes
 
 Host docker-skype
   User      docker
@@ -51,8 +57,13 @@ Host *
     Protocol 2
     VisualHostKey yes
     #FingerprintHash md5
-#Host github.com
-#  Hostname ssh.github.com
-#  User git
-#  Port 443
+Host github.com
+  Hostname ssh.github.com
+  User git
+  Port 443
+#  ProxyCommand ~/.zsh/02-proxy.zsh %h %p
+Host bitbucket.org
+  Hostname altssh.bitbucket.org
+  User git
+  Port 443
 #  ProxyCommand ~/.zsh/02-proxy.zsh %h %p
