--- a/~/.config/git/config
+++ b/~/.config/git/config
@@ -147,19 +147,27 @@
 
 [url "git@github.com:"]
 	insteadOf = "gh:"
-	pushInsteadOf = "github:"
-	pushInsteadOf = "git://github.com/"
-
-[url "git://github.com/"]
 	insteadOf = "github:"
+	pushInsteadOf = "git://github.com/"
+	pushInsteadOf = "http://github.com/"
+	pushInsteadOf = "https://github.com/"
+
+[url "git@bitbucket.org:"]
+	insteadOf = "bb:"
+	pushInsteadOf = "bitbucket:"
+	pushInsteadOf = "git://bitbucket.org/"
+	pushInsteadOf = "https://lejenome@bitbucket.org/"
+
+#[url "git://github.com/"]
+#	insteadOf = "github:"
 
 [url "git@gist.github.com:"]
 	insteadOf = "gst:"
 	pushInsteadOf = "gist:"
 	pushInsteadOf = "git://gist.github.com/"
 
-[url "git://gist.github.com/"]
-	insteadOf = "gist:"
+#[url "git://gist.github.com/"]
+#	insteadOf = "gist:"
 
 [sendemail]
 	smtpencryption =  tls
