update Xresources fonts move fontconfig extra conf to conf.d update vim maps and colors add aliases and less envars and prompt support for pyvenv to zsh delete old completions from zsh

--- a/~/.config/weston.ini
+++ b/~/.config/weston.ini
@@ -1,6 +1,6 @@
 [core]
 shell=desktop-shell.so
-#modules=xwayland.so
+modules=xwayland.so
 idle-time=600
 backend=drm-backend.so
 
@@ -30,14 +30,14 @@ duration=300
 [output]
 name=LVDS-1
 mode=1600x900
-transform=90
+#transform=90
 
 #[input-method]
 #path=/usr/libexec/weston-keyboard
 
 [terminal]
-#font=Source Code Pro
-font=Anonymous Pro
+font=Source Code Pro
+#font=Anonymous Pro
 font-size=10
 term=rxvt-unicode-256color
 
