add xmodmap update X11 & pep8 & vim & vifm config

--- a/etc/X11/xorg.conf.d/20-radeon.conf
+++ b/etc/X11/xorg.conf.d/20-radeon.conf
@@ -2,6 +2,7 @@ Section "Device"
     Identifier "Radeon"
     Driver "radeon"
     Option "EnablePageFlip"  "on"
+    # Option "TearFree"        "on" # disable dri2 pageflip when enabling it
     Option "AccelMethod"     "glamor"
     Option "RenderAccel"     "on"
     Option "ColorTiling"     "on"
