update linux & samba config

--- a/etc/hostapd/hostapd.conf
+++ b/etc/hostapd/hostapd.conf
@@ -1,8 +1,6 @@
 interface=ap0
-#ssid=FreeWifi
-#wpa_passphrase=FreeWifi
-ssid=lejenome-wifi
-wpa_passphrase=moezbouh
+ssid=mtcfss16
+wpa_passphrase=mtcfss16
 driver=nl80211
 hw_mode=g
 channel=1
@@ -16,6 +14,6 @@ rsn_pairwise=CCMP
 country_code=TN
 auth_algs=1
 #ignore_broadcast_ssid=0
-ignore_broadcast_ssid=1
+#ignore_broadcast_ssid=1
 macaddr_acl=0
 beacon_int=100
