--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -24,34 +24,33 @@
     hosts deny = 0.0.0.0/0
     hosts allow = 192.168.1.1/24 192.168.2.1/24 192.168.20.1/24
 
+    web port = 901
+
 
 [videos]
-    path = /mnt/Others/videos/
-    public = Yes
-    only guest = Yes
-    read only = Yes
-    writable = No
+    path = /mnt/Others/Videos/
+    browseable = No
 
 [documents]
     path = /mnt/Others/Documents
-    public = Yes
-    only guest = Yes
-    read only = Yes
-    writable = No
+    guest only = Yes
+    guest ok = Yes
 
 [music]
     path = /mnt/Others/Music
-    public = Yes
-    only guest = Yes
-    read only = Yes
-    writable = No
+    browseable = No
+    guest only = Yes
 
 [archive]
     path = /mnt/Others/archives
-    public = Yes
-    only guest = Yes
+    guest ok = Yes
+    guest only = Yes
+
+[code]
+    path = /mnt/Others/git
+    guest only = Yes
     read only = Yes
-    writable = No
+    browseable = No
 
 #[danger]
 #    path = /tmp/top_danger
